# SCED_Localization

./:  .pre-commit-config.yaml  .gitignore  INSTRUCTIONS.md  card.py  constants.py  main.py  pyproject.toml  qodana.sarif.json
.github/workflows/: bandit.yml  ruff.yml
misc/: taboo.py
tests/: test_main.py  test_main_properties.py
translations/de/: transform.py
translations/zh/: transform_CN.py
